[package]
name = "playlist"
version = "0.1.0"
authors = ["mattwparas <matthewparas2020@u.northwestern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rspotify = { path = "../rspotify", features = ["cli"] }
futures = "0.3.14"
env_logger = "0.8.3"
log = "0.4.11"
rand = "0.8.3"
steel = { path = "../../steel/steel" }
steel_derive = { path = "../../steel/steel_derive" }