[package]
name = "playlist"
version = "0.1.0"
authors = ["mattwparas <matthewparas2020@u.northwestern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "1.0", features = ["full"] }
# rspotify = { path = "../rspotify", features = ["cli"] }
# rspotify = { version = "0.12.0", features = ["cli", "reqwest-native-tls-vendored"] }


rspotify = { version = "0.12.0" , default-features = false, features = ["client-ureq", "ureq-rustls-tls", "cli"]}

# futures = "0.3.14"
env_logger = "0.8.3"
log = "0.4.11"
rand = "0.8.3"

steel-core = { path = "../../steel/crates/steel-core", features = ["markdown", "colors"] }
# skim = "*"


# steel = { path = "../../steel/steel" }
# steel_derive = { path = "../../steel/steel_derive" }